<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:backgroundTint="@color/material_dynamic_tertiary90"
    app:cardCornerRadius="20dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="24dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="10dp"
            app:strokeColor="@color/textColor"
            app:strokeWidth="1dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/dishImageDescription"
                android:src="@mipmap/ic_launcher" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/name"
                android:textColor="@color/textColor"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/categoryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/category"
                android:textColor="@color/textColor"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>