<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealPageActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linearLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/textColor"
                app:strokeWidth="2dp">

                <ImageView
                    android:id="@+id/dishPageImageView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/dishImageDescription"
                    android:src="@mipmap/ic_launcher" />

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/materialCardView"
                app:layout_constraintTop_toTopOf="@+id/materialCardView">


                <TextView
                    android:id="@+id/dishPageTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/name"
                    android:textColor="@color/textColor"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/dishPageCategoryTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/category"
                    android:textColor="@color/textColor"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/dishPageInstructionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/instruction"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dishPageIngredientsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dishPageInstructionTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            app:labelVisibilityMode="labeled"
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.App.BottomNavigationView"
            app:menu="@menu/bottom_navigation_menu" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>